refs #7090 #4789 Improve the look of data tables
* no zebra background color: all rows have white background
* almost no border, and border are very light
* have a light background color to differentiate it from the data rows
* make the header labels vertically aligned middle
* on hover on a row, apply light background color to this row
* make metrics right aligned

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -190,26 +190,48 @@ ol.visitorLog p {
     padding:0;
 }
 
-.dataTableVizVisitorLog table.dataTable .column {
-  white-space: normal;
-  padding: 12px 5px;
-}
-.dataTableVizVisitorLog table.dataTable .label {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+#content .dataTableVizVisitorLog {
+  table.dataTable  {
 
-.dataTableVizVisitorLog .dataTableWrapper {
-    width:100%;
+    .label {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    tr {
+      .column {
+        white-space: normal;
+        padding: 12px 5px;
+      }
+
+      .column, .label {
+        text-align: left !important;
+      }
+    }
+
+    thead tr th.sortable:not(.first) {
+      padding-left: 5px;
+    }
+
+  }
+
+  .dataTableWrapper {
+     width:100%;
+  }
+
+  tr {
+
+    &:hover .visitor-log-visitor-profile-link {
+      display:inline;
+    }
+  }
 }
 
 .visitor-log-page-list {
     position:relative;
 }
-.dataTableVizVisitorLog tr:hover .visitor-log-visitor-profile-link {
-    display:inline;
-}
+
 a.visitor-log-visitor-profile-link {
     position:absolute;
     display:none;
