--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -9,16 +9,15 @@
   td .ratio {
     color: #999999;
     font-size: 12px;
-    display:none;
+    display: inline-block;
+    visibility: hidden;
     text-align: right;
-    min-width: 45px;
-    margin-left: 4px;
+    margin-right: 4px;
     font-weight: normal;
   }
 
   td.highlight > .ratio {
-    display: inline-block;
-    line-height: 15px;
+    visibility: visible;
   }
 }
 
@@ -73,14 +72,13 @@ table.dataTable th.sortable {
 
 table.dataTable th.columnSorted {
   font-weight: bold;
-  padding-right: 20px;
+  padding-right: 13px;
   background: @dataTable-headerActive-background;
 }
 
 table.dataTable td {
-  padding: 5px 5px 5px 12px;
+  padding: 5px 1px 5px 12px;
   background: @theme-color-background-base;
-  border-left: 1px solid #e7e7e7;
 }
 
 table.dataTable td,
@@ -90,35 +88,12 @@ table.dataTable td a {
   color: @theme-color-text-light;
 }
 
-table.dataTable tr:hover > td,
-table.dataTable tr:hover > td .dataTableRowActions {
-  background-color: #FFFFF7;
-}
-
-table.dataTable tr.subDataTable:hover > td,
-table.dataTable tr.subDataTable:hover > td .dataTableRowActions {
-  background-color: #ffffcb;
-}
-
-table.dataTable tr:hover > td.cellSubDataTable
-table.dataTable tr:hover > td.cellSubDataTable .dataTableRowActions {
-  background-color: @theme-color-background-base;
-}
-
 td.clean {
   background-color: @theme-color-background-base;
 }
 
 table.dataTable td.column {
   white-space: nowrap;
-}
-
-table.dataTable td.columneven {
-  background: #efeeec;
-}
-
-table.dataTable td.columnodd {
-  background: #f6f5f3;
 }
 
 .dataTable tr.highlight td {
@@ -180,7 +155,7 @@ div.dataTable, div.dataTable > .dataTableWrapper {
 }
 
 .sortIconContainer {
-  float: right;
+  float: left;
   position: relative;
 }
 
