--- a/plugins/Live/templates/_totalVisitors.twig
+++ b/plugins/Live/templates/_totalVisitors.twig
@@ -2,7 +2,7 @@
     <table class="dataTable" cellspacing="0">
         <thead>
         <tr>
-            <th id="label" class="sortable label" style="cursor: auto;">
+            <th id="label" class="sortable label first" style="cursor: auto;">
                 <div id="thDIV">{{ 'General_Date'|translate }}</div>
             </th>
             <th id="label" class="sortable label" style="cursor: auto;">
@@ -15,12 +15,12 @@
         </thead>
         <tbody>
         <tr class="">
-            <td class="column columnodd">{{ 'Live_LastHours'|translate(24) }}</td>
+            <td class="labelodd column columnodd">{{ 'Live_LastHours'|translate(24) }}</td>
             <td class="column columnodd">{{ visitorsCountToday }}</td>
             <td class="column columnodd">{{ pisToday }}</td>
         </tr>
         <tr class="">
-            <td class="column columnodd">{{ 'Live_LastMinutes'|translate(30) }}</td>
+            <td class="labelodd column columnodd">{{ 'Live_LastMinutes'|translate(30) }}</td>
             <td class="column columnodd">{{ visitorsCountHalfHour }}</td>
             <td class="column columnodd">{{ pisHalfhour }}</td>
         </tr>
