make sure segmented visitor log is displayed correctly

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -190,7 +190,7 @@ ol.visitorLog p {
     padding:0;
 }
 
-#content .dataTableVizVisitorLog {
+.dataTableVizVisitorLog {
   table.dataTable  {
 
     .label {
