make sure looks the same if table is not sortable

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -198,7 +198,10 @@ ol.visitorLog p {
     tr {
       .column {
         white-space: normal;
-        padding: 12px 5px;
+        padding-left: 5px;
+        padding-right: 5px;
+        padding-top: 12px !important;
+        padding-bottom: 12px !important;
       }
 
       .column, .label {
@@ -206,8 +209,8 @@ ol.visitorLog p {
       }
     }
 
-    thead tr th.sortable:not(.first) {
-      padding-left: 5px;
+    thead tr th {
+      padding-left: 12px !important;
     }
 
   }
