--- a/plugins/Morpheus/stylesheets/general/_form.less
+++ b/plugins/Morpheus/stylesheets/general/_form.less
@@ -59,6 +59,7 @@ table.entityTable {
     tr {
       th {
         background-color: @color-silver-l90 !important;
+        text-align: left !important;
       }
     }
   }
