--- a/plugins/Morpheus/stylesheets/ui/_tables.less
+++ b/plugins/Morpheus/stylesheets/ui/_tables.less
@@ -4,10 +4,10 @@
 .simple-table {
     margin: 20px 0;
     width: 100%;
-    border-top: 1px solid @theme-color-border;
+    border-top: 1px solid @color-silver-l90;
 
     th, td {
-        border-bottom: 1px solid @theme-color-border;
+        border-bottom: 1px solid @color-silver-l90;
         padding: 14px;
     }
     th {
