--- a/plugins/MultiSites/angularjs/dashboard/dashboard.directive.less
+++ b/plugins/MultiSites/angularjs/dashboard/dashboard.directive.less
@@ -41,6 +41,10 @@
     margin: 0;
   }
 
+  th {
+    padding: 12px 6px 12px 12px;
+  }
+
   .indicator {
     background: url(plugins/Morpheus/images/loading-blue.gif) no-repeat center;
     height: 20px;
