--- a/plugins/CoreHome/stylesheets/zen-mode.less
+++ b/plugins/CoreHome/stylesheets/zen-mode.less
@@ -1,4 +1,4 @@
-#content:not(.admin), .widget {
+#content:not(.admin), .widget, .ui-widget {
 
   .UserCountryMap .dataTableFooterIcons {
     display: block;
