--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -83,6 +83,7 @@ select {
             font-size: inherit;
         }
     }
+
     .form-help {
         .alert;
         .alert-info;
@@ -92,6 +93,7 @@ select {
         // Smaller padding to match input's heights
         padding-top: 11px;
         padding-bottom: 10px;
+        border: 0px;
     }
     .form-description {
         width: 40%;
