--- a/plugins/MultiSites/angularjs/dashboard/dashboard.directive.less
+++ b/plugins/MultiSites/angularjs/dashboard/dashboard.directive.less
@@ -8,6 +8,10 @@
   padding: 0 15px;
   font-size: 14px;
 
+  h2 {
+    border-bottom: 0px;
+  }
+
   .notification-error {
     margin-top: 15px;
   }
@@ -37,7 +41,7 @@
   td, tr, .sparkline {
     text-align: center;
     vertical-align: middle;
-    padding: 3px 6px 3px 12px;
+    padding: 2px 6px 2px 12px;
     margin: 0;
   }
 
