--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -519,7 +519,7 @@ div.dataTable, div.dataTable > .dataTableWrapper {
 }
 
 /* Actions table */
-.dataTableActions table.dataTable tr td.labelodd {
+.dataTableActions table.dataTable tr td.label {
   background-image: none;
 }
 
