--- a/plugins/CoreHome/stylesheets/zen-mode.less
+++ b/plugins/CoreHome/stylesheets/zen-mode.less
@@ -31,8 +31,7 @@
   }
 
   .dataTableActions table.dataTable  {
-    td.columnodd,
-    td.columneven,
+    td.column
     th.sortable:not(.first) {
       width: 50px;
     }
