--- a/plugins/Live/templates/_totalVisitors.twig
+++ b/plugins/Live/templates/_totalVisitors.twig
@@ -15,14 +15,14 @@
         </thead>
         <tbody>
         <tr class="">
-            <td class="labelodd column columnodd">{{ 'Live_LastHours'|translate(24) }}</td>
-            <td class="column columnodd">{{ visitorsCountToday }}</td>
-            <td class="column columnodd">{{ pisToday }}</td>
+            <td class="label column">{{ 'Live_LastHours'|translate(24) }}</td>
+            <td class="column">{{ visitorsCountToday }}</td>
+            <td class="column">{{ pisToday }}</td>
         </tr>
         <tr class="">
-            <td class="labelodd column columnodd">{{ 'Live_LastMinutes'|translate(30) }}</td>
-            <td class="column columnodd">{{ visitorsCountHalfHour }}</td>
-            <td class="column columnodd">{{ pisHalfhour }}</td>
+            <td class="label column">{{ 'Live_LastMinutes'|translate(30) }}</td>
+            <td class="column">{{ visitorsCountHalfHour }}</td>
+            <td class="column">{{ pisHalfhour }}</td>
         </tr>
         </tbody>
     </table>
