--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -56,6 +56,14 @@ select {
         font-size: 11px;
         text-transform: uppercase;
         margin: 8px 0;
+
+      /*
+      margin: 8px 0px 4px 0px;
+      color: #0D0D0D;
+      font-family: Verdana, sans-serif;
+      font-size: 18px;
+      line-height: 24px;
+      font-weight: normal; */
     }
     input, select, textarea {
         display: block;
