--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -580,7 +580,7 @@ tr.level12 td.label {
 }
 
 tr td.label img.plusMinus {
-  margin-left: -1em;
+  margin-left: -10px;
   margin-right: 3px;
   margin-top: -5px;
 }
