fix some screenshot tests

--- a/plugins/CoreHome/stylesheets/zen-mode.less
+++ b/plugins/CoreHome/stylesheets/zen-mode.less
@@ -49,15 +49,6 @@
     border-top: 0px;
   }
 
-  h2:nth-of-type(n+2) {
-    margin-top: 40px;
-  }
-
-  h2 {
-    padding-left: 10px;
-    font-size: 24px;
-  }
-
   .goalEntry:first-of-type {
     padding-top: 20px;
   }
@@ -82,6 +73,18 @@
     margin-left: 13px;
   }
 
+}
+
+#content:not(.admin), .widget {
+
+  h2:nth-of-type(n+2) {
+    margin-top: 40px;
+  }
+
+  h2 {
+    padding-left: 10px;
+    font-size: 24px;
+  }
 }
 
 .dataTableFeatures .expandDataTableFooterDrawer {
