--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -380,27 +380,76 @@ table.dataTable {
                 }
 
                 &.columnSorted {
+                  .sortIcon {
+                    display: inline-block;
+                    position: absolute;
+                    margin: 0px;
+                    height: 12px;
+                    margin-top: -1px;
+                    margin-left: -14px;
 
+                    &.asc {
+                      margin-top: -6px;
+                    }
+
+                  }
+
+                  &.first {
                     .sortIcon {
-                        display: inline;
-                        position: relative;
+                      margin-top: -1px;
+                      margin-left: 4px;
+                      &.asc {
+                        margin-top: -6px;
+                      }
+                    }
+                  }
+
+                  .sortIcon.asc:after {
+                    content: " \25B2";
+                    border-bottom: 5px solid @theme-color-brand;
+                    border-top: 0px;
+                  }
+
+                  .sortIcon:after {
+                    content: " \25BC";
+                    font-size: 1px;
+                    color: @theme-color-brand;
+                    border-left: 4px solid rgba(0, 0, 0, 0);
+                    border-right: 4px solid rgba(0, 0, 0, 0);
+                    border-top: 5px solid @theme-color-brand;
+                  }
+/*
+                    .sortIcon {
+
+                      display: block;
+                      position: absolute;
+                      right: 7px;
+                      top: 1px; // -1px;
+                      width: 12px;
+                      height: 12px;
+                    }
+
+                    .sortIconContainerAsc {
+                      .sortIcon {
+                        top: -7px; // -6px;
+                      }
                     }
 
                     .sortIconContainer {
                       display: inline;
                       float: none;
-                      position: absolute;
-                      margin-top: -1px;
-                      margin-left: -13px;
-
-                      &.sortIconContainerAsc {
-                        margin-top: -6px;
-                      }
                     }
 
                     &.first {
-                      .sortIconContainer {
-                        margin-left: 5px;
+                      .sortIcon {
+                        right: initial;
+                        top: -1px;
+                        left: 4px;
+                      }
+                      .sortIconContainerAsc {
+                        .sortIcon {
+                          top: -6px;
+                        }
                       }
                     }
 
@@ -422,6 +471,8 @@ table.dataTable {
                       border-right: 4px solid rgba(0, 0, 0, 0);
                       border-top: 5px solid @theme-color-brand;
                     }
+
+                    */
 
                 }
             }
